# web-wubi

./: .gitignore  .prettierignore  README.md  background.js  manifest.json  package.json  release-archive.sh
.github/workflows/: build.yml  deploy.yml
content-scripts/: app-web.js  app.js  wubi-assistant-search.js
content-scripts/src/: common.js  main.js
content-scripts/src/Bundle/css/: app.css
content-scripts/src/Component/: box_main.js
content-scripts/src/Component/input-box/: input-box.js  input-method-core.js  input-method-options.js  input-method-ui.js  input-method.js
content-scripts/src/Component/input-box-icon/: box-init-icon.js
content-scripts/src/Component/input-method-box/: box.js
content-scripts/src/Component/message/: README.md  send.js  socket.js
docs/: REAME.md  roadmap.md  solution.md
server/: README.md
server/cpp/: CMakeLists.txt  README.md  main.cc
server/php/: .gitignore  README.md  bootstrap.php  composer.json  php.ini  setup-php-runtime.sh  start-local-serve.sh
server/php/src/: Application.php
server/php/src/Controller/: ApiController.php  ControllerTrait.php
test/: index.html  start-local-serv.sh  start-local-serve.sh  test.js
tools/: README.md  dev.md  download-chromium-extension.sh  update-library.sh
tools/python/: Pipfile  README.md  main.py
tools/server/src/cpp/: CMakeLists.txt
